# migrator

./: ASYNC_GUIDE.md  CHANGELOG.md  IMPLEMENTATION_PLAN_v0.2.1.md  README.md  RELEASE_NOTES_v0.2.0.md  feedback.md  install.sh  pyproject.toml
src/migrator/: __init__.py  cli.py
src/migrator/core/: alembic_backend.py  base.py  config.py  detector.py
src/migrator/utils/: config_loader.py
test-app/: README.md  main.py  models.py  schemas.py  test.db
tests/: conftest.py  test_config.py  test_detector.py  test_e2e.py  test_file_utils.py  test_validators.py
