[project]
name = "migrator"
version = "0.1.0"
description = "Universal migration CLI for Python apps"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Peter Adelodun" }
]
dependencies = [
    "alembic>=1.17.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
]

[project.scripts]
migrator = "migrator.cli:app"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
